changed proj cards to allow only one open, fixed gaps to avoid overlap (#27)

--- a/src/app/components/projects-page/projects-page.component.scss
+++ b/src/app/components/projects-page/projects-page.component.scss
@@ -38,10 +38,14 @@
     }
 
     .card-container {
-      margin: 13vh 0;
+      margin: 14vh 0;
 
-      @include respond-to("large") {
-        margin: 15vh 0;
+      @include respond-to("medium") {
+        margin: 9vh 0;
+      }
+
+      @include respond-to("xx-large") {
+        margin: 11vh 0;
       }
     }
   }
